# rpi-ez-stream

./: Cargo.toml  MODULE_SCHEMA.md  build.rs
.github/workflows/: build-mingw.yml  release_publisher.yml  rust.yml
crates/ez-stream-module/: Cargo.toml
crates/ez-stream-module/src/: lib.rs  module_handler.rs
crates/ez-stream-module/src/structs/: mod.rs
src/: get_endpoints.rs  main.rs  main_application.rs
src/application_data/: application_state.rs
src/css_module/: mod.rs  module_handler.rs
src/ui/actions/: initialize_character_select_data.rs
src/ui/character_select_screen/: character_select_button.rs
src_deprecated/: main.rs
ui/: MainWindow.slint  WindowPreferences.slint  edu.rpi.smashclub.cmb  main_window.ui
ui/character_select_screen/: character_select_button.ui  character_select_screen.ui
ui/components/: EZStreamScoreInput.slint  PlayerTagInput.slint
ui/components/primitive/: CenteredGridLayout.slint  EZStreamButton.slint  EZStreamTextInput.slint
ui/css_screen/: CharacterSelectScreen.slint
ui/data/: CharacterData.slint  PlayerEnum.slint
ui/main_screen/: main_screen.ui  player_name_entry.ui
ui_deprecated/main_screen/: tournament_info_bar.ui
ui_deprecated/module_dialog/: layout.ui  module_dialog.ui
